--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css"/>
   </head>
   <body>
     <header>
@@ -44,6 +45,86 @@
             <h3>Технокряк</h3>
             <p>Веб-сайт</p>
           </li>
+          <li>
+            <img
+              src="./images/poster-new-orlean.jpg"
+              alt="Постер Новый Орлеан"
+              width="370"
+              height="294"
+            />
+            <h3>Постер New Orlean vs Golden Star</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/seafood.jpg" alt="Ресторан" width="370" height="294" />
+            <h3>Ресторан Seafood</h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img src="./images/headphones.jpg" alt="Чорные наушники" width="370" height="294" />
+            <h3>Проект Prime/h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/computer.jpg"
+              alt="Ноутбук с открытым сайтом"
+              width="370"
+              height="294"
+            />
+            <h3>Технокряк</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/boxes.jpg"
+              alt="Две коробки"
+              width="370"
+              height="294"
+            />
+            <h3>Проект Boxes</h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./images/monitor.jpg"
+              alt="Монитор"
+              width="370"
+              height="294"
+            />
+            <h3>Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/book.jpg"
+              alt="Книга"
+              width="370"
+              height="294"
+            />
+            <h3>Издание Limited Edition</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/lab-tag.jpg"
+              alt="Бирка"
+              width="370"
+              height="294"
+            />
+            <h3>Проект LAB</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/crowing-business.jpg"
+              alt="Работа за ноутбуком"
+              width="370"
+              height="294"
+            />
+            <h3>Growing Business</h3>
+            <p>Приложение</p>
+          </li>                    
         </ul>
       </section>
     </main>
