--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -62,7 +62,7 @@
           </li>
           <li>
             <img src="./images/headphones.jpg" alt="Чорные наушники" width="370" height="294" />
-            <h3>Проект Prime/h3>
+            <h3>Проект Prime</h3>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -76,42 +76,22 @@
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img
-              src="./images/boxes.jpg"
-              alt="Две коробки"
-              width="370"
-              height="294"
-            />
+            <img src="./images/boxes.jpg" alt="Две коробки" width="370" height="294" />
             <h3>Проект Boxes</h3>
             <p>Приложение</p>
           </li>
           <li>
-            <img
-              src="./images/monitor.jpg"
-              alt="Монитор"
-              width="370"
-              height="294"
-            />
+            <img src="./images/monitor.jpg" alt="Монитор" width="370" height="294" />
             <h3>Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img
-              src="./images/book.jpg"
-              alt="Книга"
-              width="370"
-              height="294"
-            />
+            <img src="./images/book.jpg" alt="Книга" width="370" height="294" />
             <h3>Издание Limited Edition</h3>
             <p>Дизайн</p>
           </li>
           <li>
-            <img
-              src="./images/lab-tag.jpg"
-              alt="Бирка"
-              width="370"
-              height="294"
-            />
+            <img src="./images/lab-tag.jpg" alt="Бирка" width="370" height="294" />
             <h3>Проект LAB</h3>
             <p>Маркетинг</p>
           </li>
@@ -124,7 +104,7 @@
             />
             <h3>Growing Business</h3>
             <p>Приложение</p>
-          </li>                    
+          </li>
         </ul>
       </section>
     </main>
