--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
+  <body class="body">
+    <header class="body-header">
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
@@ -23,11 +23,11 @@
       </ul>
     </header>
     <main>
-      <section>
+      <section class="main-preview">
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
       </section>
-      <section>
+      <section class="main-features">
         <h2>Наши особености</h2>
         <ul>
           <li>
@@ -52,7 +52,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="main-features">
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
@@ -66,7 +66,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="main-team">
         <h2>Наша команда</h2>
         <ul>
           <li>
@@ -92,7 +92,7 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <a href="./index.html">WebStudio</a>
       <address>
         <ul>
