--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="body">
+  <body>
+    <!-- Шапка сайта-->
     <header class="body-header">
       <nav>
         <a href="./index.html">WebStudio</a>
