--- a/index.html
+++ b/index.html
@@ -1,114 +1,128 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <!-- Шапка сайта-->
-    <header class="body-header">
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-    <main>
-      <section class="main-preview">
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
-      </section>
-      <section class="main-features">
-        <h2>Наши особености</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-          </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-          </li>
-        </ul>
-      </section>
-      <section class="main-features">
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img src="./images/keyboard.jpg" alt="Клавиатура на столе" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./images/telephone.jpg" alt="Телефон в руках" width="370" height="294" />
-          </li>
-          <li>
-            <img src="./images/tablet.jpg" alt="Работа за планшетом" width="370" height="294" />
-          </li>
-        </ul>
-      </section>
-      <section class="main-team">
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/igor.jpg" alt="Дизайнер продукта" width="270" height="260" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/olga.jpg" alt="Фронтенд-разработчик" width="270" height="260" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/nikolay.jpg" alt="Маркетинг" width="270" height="260" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./images/mikhail.jpg" alt="UL Дизайнер" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer">
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <ul>
-          <li>
-            <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки,26</a
-            >
-          </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </footer>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+	</head>
+	<body>
+		<!-- Шапка сайта-->
+		<header class="header">
+			<nav>
+				<a href="./index.html">
+					<span class="logo-web">Web</span>
+					<span class="logo-studio">Studio</span>
+				</a>
+				<ul>
+					<li><a href="./index.html" class="header-nav">Студия</a></li>
+					<li><a href="./portfolio.html" class="header-nav">Портфолио</a></li>
+					<li><a href="#" class="header-nav">Контакты</a></li>
+				</ul>
+			</nav>
+			<ul>
+				<li><a href="mailto:info@devstudio.com" class="header-contact">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="header-contact">+38 096 111 11 11</a></li>
+			</ul>
+		</header>
+
+		<!--------Основной контент-------->
+		<main>
+			<section>
+				<h1 class="main-preview">Эффективные решения для вашего бизнеса</h1>
+				<button type="button" class="main-button">Заказать услугу</button>
+			</section>
+			<section>
+				<h2 class="main-features">Наши особености</h2>
+				<ul clas="main-list">
+					<li clas="main-list">
+						<h3 clas="main-list">Внимание к деталям</h3>
+						<p class="main-list-item">
+							Идейные соображения, а также начало повседневной работы по формированию позиции.
+						</p>
+					</li>
+					<li>
+						<h3 clas="main-list">Пунктуальность</h3>
+						<p class="main-list-item">
+							Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+						</p>
+					</li>
+					<li>
+						<h3 clas="main-list">Планирование</h3>
+						<p class="main-list-item">
+							Равным образом консультация с широким активом в значительной степени обуславливает.
+						</p>
+					</li>
+					<li>
+						<h3 clas="main-list">Современные технологии</h3>
+						<p class="main-list-item">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+					</li>
+				</ul>
+			</section>
+			<section>
+				<h2>Чем мы занимаемся</h2>
+				<ul>
+					<li>
+						<img src="./images/keyboard.jpg" alt="Клавиатура на столе" width="370" height="294" />
+					</li>
+					<li>
+						<img src="./images/telephone.jpg" alt="Телефон в руках" width="370" height="294" />
+					</li>
+					<li>
+						<img src="./images/tablet.jpg" alt="Работа за планшетом" width="370" height="294" />
+					</li>
+				</ul>
+			</section>
+			<section class="main-team">
+				<h2>Наша команда</h2>
+				<ul>
+					<li>
+						<img src="./images/igor.jpg" alt="Дизайнер продукта" width="270" height="260" />
+						<h3>Игорь Демьяненко</h3>
+						<p>Product Designer</p>
+					</li>
+					<li>
+						<img src="./images/olga.jpg" alt="Фронтенд-разработчик" width="270" height="260" />
+						<h3>Ольга Репина</h3>
+						<p>Frontend Developer</p>
+					</li>
+					<li>
+						<img src="./images/nikolay.jpg" alt="Маркетинг" width="270" height="260" />
+						<h3>Николай Тарасов</h3>
+						<p>Marketing</p>
+					</li>
+					<li>
+						<img src="./images/mikhail.jpg" alt="UL Дизайнер" width="270" height="260" />
+						<h3>Михаил Ермаков</h3>
+						<p>UI Designer</p>
+					</li>
+				</ul>
+			</section>
+		</main>
+
+		<!--Подвал-->
+		<footer class="footer">
+			<a href="./index.html">WebStudio</a>
+			<address>
+				<ul>
+					<li>
+						<a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">
+							г. Киев, пр-т Леси Украинки,26
+						</a>
+					</li>
+					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+				</ul>
+			</address>
+		</footer>
+	</body>
 </html>
