--- a/portfolio.html
+++ b/portfolio.html
@@ -1,129 +1,147 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </header>
-    <main>
-      <section>
-        <h2>Наши проекты</h2>
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
-        </ul>
-      </section>
-      <section>
-        <ul>
-          <li>
-            <img
-              src="./images/computer.jpg"
-              alt="Ноутбук с открытым сайтом"
-              width="370"
-              height="294"
-            />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/poster-new-orlean.jpg"
-              alt="Постер Новый Орлеан"
-              width="370"
-              height="294"
-            />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/seafood.jpg" alt="Ресторан" width="370" height="294" />
-            <h3>Ресторан Seafood</h3>
-            <p>Приложение</p>
-          </li>
-          <li>
-            <img src="./images/headphones.jpg" alt="Чорные наушники" width="370" height="294" />
-            <h3>Проект Prime</h3>
-            <p>Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./images/computer.jpg"
-              alt="Ноутбук с открытым сайтом"
-              width="370"
-              height="294"
-            />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
-          </li>
-          <li>
-            <img src="./images/boxes.jpg" alt="Две коробки" width="370" height="294" />
-            <h3>Проект Boxes</h3>
-            <p>Приложение</p>
-          </li>
-          <li>
-            <img src="./images/monitor.jpg" alt="Монитор" width="370" height="294" />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
-          </li>
-          <li>
-            <img src="./images/book.jpg" alt="Книга" width="370" height="294" />
-            <h3>Издание Limited Edition</h3>
-            <p>Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/lab-tag.jpg" alt="Бирка" width="370" height="294" />
-            <h3>Проект LAB</h3>
-            <p>Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./images/crowing-business.jpg"
-              alt="Работа за ноутбуком"
-              width="370"
-              height="294"
-            />
-            <h3>Growing Business</h3>
-            <p>Приложение</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <ul>
-          <li>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Portfolio</title>
+
+		<link rel="stylesheet" href="./css/styles.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"/>
+
+	</head>
+
+	<body>
+		<header>
+			<nav>
+				<a href="./index.html">
+					<span class="logo-web">Web</span>
+					<span class="logo-studio">Studio</span>
+        </a>
+				<ul>
+					<li><a href="./index.html" class="header-nav">Студия</a></li>
+					<li><a href="./portfolio.html" class="header-nav">Портфолио</a></li>
+					<li><a href="#" class="header-nav">Контакты</a></li>
+				</ul>
+			</nav>
+
+			<ul>
+				<li><a href="mailto:info@devstudio.com" class="header-contact">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="header-contact">+38 096 111 11 11</a></li>
+			</ul>
+		</header>
+
+		<main>
+
+			<section>
+				<h2>Наши проекты</h2>
+				<ul>
+					<li><button type="button">Все</button></li>
+					<li><button type="button">Веб-сайты</button></li>
+					<li><button type="button">Приложения</button></li>
+					<li><button type="button">Дизайн</button></li>
+					<li><button type="button">Маркетинг</button></li>
+				</ul>
+			</section>
+
+			<section>
+				<ul>
+					<li>
+						<a href="">
+							<img src="./images/computer.jpg" alt="Ноутбук с открытым сайтом" width="370" height="294" />
+							<h3>Технокряк</h3>
+							<p>Веб-сайт</p>
+						</a>
+					</li>
+
+					<li>
+            <a href="">
+						<img src="./images/poster-new-orlean.jpg" alt="Постер Новый Орлеан" width="370" height="294" />
+						<h3>Постер New Orlean vs Golden Star</h3>
+						<p>Дизайн</p>
+            </a>
+					</li>
+
+					<li>
+            <a href="">
+						<img src="./images/seafood.jpg" alt="Ресторан" width="370" height="294" />
+						<h3>Ресторан Seafood</h3>
+						<p>Приложение</p>
             <a
-              href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки,26</a
-            >
-          </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </footer>
-  </body>
+					</li>
+
+					<li>
+            <a href="">
+						<img src="./images/headphones.jpg" alt="Чорные наушники" width="370" height="294" />
+						<h3>Проект Prime</h3>
+						<p>Маркетинг</p>
+            </a>
+					</li>
+
+					<li>
+            <a href="">
+						<img src="./images/boxes.jpg" alt="Две коробки" width="370" height="294" />
+						<h3>Проект Boxes</h3>
+						<p>Приложение</p>
+            </a>
+					</li>
+
+					<li>
+            <a href="">
+						<img src="./images/monitor.jpg" alt="Монитор" width="370" height="294" />
+						<h3>Inspiration has no Borders</h3>
+						<p>Веб-сайт</p>
+            </a>
+					</li>
+
+					<li>
+            <a href="">
+						<img src="./images/book.jpg" alt="Книга" width="370" height="294" />
+						<h3>Издание Limited Edition</h3>
+						<p>Дизайн</p>
+            </a>
+					</li>
+
+					<li>
+            <a href="">
+						<img src="./images/lab-tag.jpg" alt="Бирка" width="370" height="294" />
+						<h3>Проект LAB</h3>
+						<p>Маркетинг</p>
+            </a>
+					</li>
+
+					<li>
+            <a href="">
+						<img src="./images/crowing-business.jpg" alt="Работа за ноутбуком" width="370" height="294" />
+						<h3>Growing Business</h3>
+						<p>Приложение</p>
+            </a>
+					</li>
+
+				</ul>
+			</section>
+		</main>
+		<footer>
+			<a href="./index.html">WebStudio</a>
+			<address>
+				<ul>
+					<li>
+						<a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">
+							г. Киев, пр-т Леси Украинки,26
+						</a>
+					</li>
+					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+				</ul>
+			</address>
+		</footer>
+	</body>
 </html>
