--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 
 		<!--------Основной контент-------->
 		<main>
-			<section>
+			<section class="main">
 				<h1 class="main-preview">Эффективные решения для вашего бизнеса</h1>
 				<button type="button" class="main-button">Заказать услугу</button>
 			</section>
 			<section>
 				<h2 class="main-features">Наши особености</h2>
-				<ul clas="main-list">
-					<li clas="main-list">
+				<ul>
+					<li>
 						<h3 clas="main-list">Внимание к деталям</h3>
 						<p class="main-list-item">
 							Идейные соображения, а также начало повседневной работы по формированию позиции.
@@ -69,7 +69,7 @@
 				</ul>
 			</section>
 			<section>
-				<h2>Чем мы занимаемся</h2>
+				<h2 class="main-product">Чем мы занимаемся</h2>
 				<ul>
 					<li>
 						<img src="./images/keyboard.jpg" alt="Клавиатура на столе" width="370" height="294" />
@@ -83,27 +83,27 @@
 				</ul>
 			</section>
 			<section class="main-team">
-				<h2>Наша команда</h2>
+				<h2 class="main-team-title">Наша команда</h2>
 				<ul>
 					<li>
 						<img src="./images/igor.jpg" alt="Дизайнер продукта" width="270" height="260" />
-						<h3>Игорь Демьяненко</h3>
-						<p>Product Designer</p>
+						<h3 class="main-team-name">Игорь Демьяненко</h3>
+						<p class="main-team-job">Product Designer</p>
 					</li>
 					<li>
 						<img src="./images/olga.jpg" alt="Фронтенд-разработчик" width="270" height="260" />
-						<h3>Ольга Репина</h3>
-						<p>Frontend Developer</p>
+						<h3 class="main-team-name">Ольга Репина</h3>
+						<p class="main-team-job">Frontend Developer</p>
 					</li>
 					<li>
 						<img src="./images/nikolay.jpg" alt="Маркетинг" width="270" height="260" />
-						<h3>Николай Тарасов</h3>
-						<p>Marketing</p>
+						<h3 class="main-team-name">Николай Тарасов</h3>
+						<p class="main-team-job">Marketing</p>
 					</li>
 					<li>
 						<img src="./images/mikhail.jpg" alt="UL Дизайнер" width="270" height="260" />
-						<h3>Михаил Ермаков</h3>
-						<p>UI Designer</p>
+						<h3 class="main-team-name">Михаил Ермаков</h3>
+						<p class="main-team-job">UI Designer</p>
 					</li>
 				</ul>
 			</section>
@@ -111,16 +111,18 @@
 
 		<!--Подвал-->
 		<footer class="footer">
-			<a href="./index.html">WebStudio</a>
+			<a href="./index.html">
+					<span class="logo-web">Web</span>
+					<span class="logo-studio">Studio</span>
 			<address>
 				<ul>
 					<li>
-						<a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer">
+						<a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer" class="footer-adress">
 							г. Киев, пр-т Леси Украинки,26
 						</a>
 					</li>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+					<li><a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
