--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				</ul>
 			</nav>
 			<ul>
-				<li><a href="mailto:info@devstudio.com" class="header-contact">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111" class="header-contact">+38 096 111 11 11</a></li>
+				<li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 
@@ -42,7 +42,7 @@
 				<button type="button" class="main-button">Заказать услугу</button>
 			</section>
 			<section>
-				<h2 class="main-features">Наши особености</h2>
+				<h2 class="visually-hidden">Наши особености</h2>
 				<ul>
 					<li>
 						<h3 clas="main-list">Внимание к деталям</h3>
@@ -113,7 +113,7 @@
 		<footer class="footer">
 			<a href="./index.html">
 					<span class="logo-web">Web</span>
-					<span class="logo-studio">Studio</span>
+					<span class="logo-studio-footer">Studio</span>
 			<address>
 				<ul>
 					<li>
@@ -121,8 +121,8 @@
 							г. Киев, пр-т Леси Украинки,26
 						</a>
 					</li>
-					<li><a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
+					<li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
