--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 	</head>
 
 	<body>
-		<header>
+		<header class="header">
 			<nav>
 				<a href="./index.html">
 					<span class="logo-web">Web</span>
@@ -31,14 +31,14 @@
 			</nav>
 
 			<ul>
-				<li><a href="mailto:info@devstudio.com" class="header-contact">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111" class="header-contact">+38 096 111 11 11</a></li>
+				<li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 
 		<main>
 			<section>
-				<h2>Наши проекты</h2>
+				<h2 class="visually-hidden">Наши проекты</h2>
 				<ul>
 					<li><button type="button" class="btn">Все</button></li>
 					<li><button type="button" class="btn">Веб-сайты</button></li>
@@ -128,7 +128,7 @@
 		<footer class="footer">
 			<a href="./index.html">
 					<span class="logo-web">Web</span>
-					<span class="logo-studio">Studio</span>
+					<span class="logo-studio-footer">Studio</span>
 			<address>
 				<ul>
 					<li>
@@ -136,8 +136,8 @@
 							г. Киев, пр-т Леси Украинки,26
 						</a>
 					</li>
-					<li><a href="mailto:info@devstudio.com" class="footer-contact">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111" class="footer-contact">+38 096 111 11 11</a></li>
+					<li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
