--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@ rel="stylesheet">
 		<header class="header">
 			<nav>
 				<a href="./index.html">
-					<span class="logo-web">Web</span>
-					<span class="logo-studio">Studio</span>
+					<span class="logo-web">Web</span><span class="logo-studio">Studio</span>
 				</a>
 				<ul>
 					<li><a href="./index.html" class="header-nav">Студия</a></li>
@@ -32,7 +31,7 @@ rel="stylesheet">
 			</ul>
 		</header>
 
-		<!--------Основной контент-------->
+		<!-------Основной контент-------->
 		<main>
 			<section class="main">
 				<h1 class="main-preview">Эффективные решения для вашего бизнеса</h1>
@@ -42,25 +41,25 @@ rel="stylesheet">
 				<h2 class="visually-hidden">Наши особености</h2>
 				<ul>
 					<li>
-						<h3 clas="main-list">Внимание к деталям</h3>
+						<h3 class="main-list">Внимание к деталям</h3>
 						<p class="main-list-item">
 							Идейные соображения, а также начало повседневной работы по формированию позиции.
 						</p>
 					</li>
 					<li>
-						<h3 clas="main-list">Пунктуальность</h3>
+						<h3 class="main-list">Пунктуальность</h3>
 						<p class="main-list-item">
 							Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
 						</p>
 					</li>
 					<li>
-						<h3 clas="main-list">Планирование</h3>
+						<h3 class="main-list">Планирование</h3>
 						<p class="main-list-item">
 							Равным образом консультация с широким активом в значительной степени обуславливает.
 						</p>
 					</li>
 					<li>
-						<h3 clas="main-list">Современные технологии</h3>
+						<h3 class="main-list">Современные технологии</h3>
 						<p class="main-list-item">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
 					</li>
 				</ul>
@@ -82,22 +81,22 @@ rel="stylesheet">
 			<section class="main-team">
 				<h2 class="main-team-title">Наша команда</h2>
 				<ul>
-					<li>
+					<li class="main-team-list">
 						<img src="./images/igor.jpg" alt="Дизайнер продукта" width="270" height="260" />
 						<h3 class="main-team-name">Игорь Демьяненко</h3>
 						<p class="main-team-job">Product Designer</p>
 					</li>
-					<li>
+					<li class="main-team-list">
 						<img src="./images/olga.jpg" alt="Фронтенд-разработчик" width="270" height="260" />
 						<h3 class="main-team-name">Ольга Репина</h3>
 						<p class="main-team-job">Frontend Developer</p>
 					</li>
-					<li>
+					<li class="main-team-list">
 						<img src="./images/nikolay.jpg" alt="Маркетинг" width="270" height="260" />
 						<h3 class="main-team-name">Николай Тарасов</h3>
 						<p class="main-team-job">Marketing</p>
 					</li>
-					<li>
+					<li class="main-team-list">
 						<img src="./images/mikhail.jpg" alt="UL Дизайнер" width="270" height="260" />
 						<h3 class="main-team-name">Михаил Ермаков</h3>
 						<p class="main-team-job">UI Designer</p>
@@ -106,17 +105,15 @@ rel="stylesheet">
 			</section>
 		</main>
 
-		<!--Подвал-->
+		<!-----------------------------Подвал------------------------------------->
 		<footer class="footer">
 			<a href="./index.html">
-					<span class="logo-web">Web</span>
-					<span class="logo-studio-footer">Studio</span>
-			<address>
+					<span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span>
+			    <address class="address">    
 				<ul>
 					<li>
-						<a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer" class="footer-adress">
-							г. Киев, пр-т Леси Украинки,26
-						</a>
+						<a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" 
+						rel="noopener noreferrer" class="footer-adress">г. Киев, пр-т Леси Украинки,26 </a>
 					</li>
 					<li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
 					<li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
