--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-rel="stylesheet"> 
-		<link rel="stylesheet" href="./css/styles.css" />	
-
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
 		<!-- Шапка сайта-->
 		<header class="header">
 			<nav>
 				<a href="./index.html">
-					<span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+					<span class="logo-web">Web</span>
+					<span class="logo-studio">Studio</span>
 				</a>
 				<ul>
 					<li><a href="./index.html" class="header-nav">Студия</a></li>
@@ -108,12 +110,20 @@ rel="stylesheet">
 		<!-----------------------------Подвал------------------------------------->
 		<footer class="footer">
 			<a href="./index.html">
-					<span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span>
-			    <address class="address">    
+				<span class="logo-web">Web</span>
+				<span class="logo-studio-footer">Studio</span>
+			</a>
+			<address class="address">
 				<ul>
 					<li>
-						<a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" 
-						rel="noopener noreferrer" class="footer-adress">г. Киев, пр-т Леси Украинки,26 </a>
+						<a
+							href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+							target="_blank"
+							rel="noopener noreferrer"
+							class="footer-adress"
+						>
+							г. Киев, пр-т Леси Украинки,26
+						</a>
 					</li>
 					<li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
 					<li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
